<resources>
    <string name="app_name">IQWhizzFin</string>

    <string name="register">Register</string>
    <string name="not_registerd">Not Registered ?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered">Already registered ?</string>
    <string name="login">LOGIN</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="afficher_modifier_profil">Afficher/Modifier profil</string>
    <string name="rapid_quiz">Rapid Quiz</string>
    <string name="recherche_d_ami">Recherche d\'ami</string>
    <string name="log_out">Log out</string>
    <string name="go_starting_screen">Go starting screen</string>
</resources>
